# StorageServiceLite

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  static.yml
sample/: app.py
src/storageservicelite/: __init__.py  fileformat.py  models.py  storage.py
tests/: conftest.py  test_concurrent.py  test_delete.py  test_history.py  test_item_model.py  test_metadata.py  test_set_get.py  test_storage_open.py
webui/: app.js  index.html  styles.css
